# rs-anpr

./: Cargo.toml  README.md
src/: lib.rs
src/alpr/: alpr.rs  mod.rs
src/ocr/: mod.rs  pipeline.rs
src/ocr/det/: mod.rs  postprocess.rs  predict.rs  preprocess.rs
src/ppocr_onnx/: mod.rs
src/utils/: image.rs
