[package]
name = "rs-anpr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.94"
ndarray = "0.16.1"
opencv = { version="0.93.5", default-features = false, features = ["calib3d", "features2d", "rgb", "imgproc", "imgcodecs"] }
serde_json = "1.0.133"
tract = "0.21.9"
tract-onnx = "0.21.9"
num_cpus = "1.16.0"